[tool.poetry]
name = "ntpro"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yaroslav.nogovitsyn@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.8.0"
pytest = "^7.4.0"
dateparser = "^1.1.8"
isort = "^5.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
